provisioners_aws/igw.tf
resource "aws_internet_gateway" "provision_igw" {
  vpc_id = aws_vpc.provision_vpc.id
}
